--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Components made with React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -36,12 +38,24 @@
   },
   "homepage": "https://github.com/JamesSingleton/react-building-blocks#readme",
   "dependencies": {
+    "classnames": "^2.2.6",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.3",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
+    "@storybook/addon-actions": "^5.0.10",
+    "@storybook/addon-links": "^5.0.10",
+    "@storybook/addons": "^5.0.10",
+    "@storybook/react": "^5.0.10",
+    "@storybook/theming": "^5.0.10",
+    "babel-loader": "^8.0.5",
+    "babel-preset-amex": "^2.0.0",
+    "eslint": "^5.16.0",
     "eslint-config-amex": "^10.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
