--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,23 @@ jobs:
   build:
     docker:
       - image: circleci/node:10.15.1
+    working_directory: ~/repo
     steps:
       - checkout
-      - run: echo "A first hello"
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: npm i
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package.json" }}
+      # no tests, so lets just lint and check the build works
+      - run: npm run lint
+      - run: npm run build-storybook
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
