--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
+    "lint": "eslint src",
     "build-storybook": "build-storybook"
   },
   "lint-staged": {
