--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Components made with React",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage --colors",
     "storybook": "start-storybook -p 6006",
     "lint": "eslint src",
     "build-storybook": "build-storybook"
@@ -14,6 +16,9 @@
       "prettier --single-quote --write",
       "git add"
     ]
+  },
+  "jest": {
+    "preset": "amex-jest-preset-react"
   },
   "husky": {
     "hooks": {
@@ -54,11 +59,15 @@
     "@storybook/addons": "^5.0.10",
     "@storybook/react": "^5.0.10",
     "@storybook/theming": "^5.0.10",
+    "amex-jest-preset-react": "^5.0.1",
     "babel-loader": "^8.0.5",
     "babel-preset-amex": "^2.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-amex": "^10.1.0",
     "husky": "^1.3.1",
+    "jest": "^24.7.1",
     "lint-staged": "^8.1.5",
     "prettier": "^1.17.0"
   }
