--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "prettier --single-quote --write",
+      "eslint --fix",
       "git add"
     ]
   },
@@ -68,7 +68,6 @@
     "eslint-config-amex": "^10.1.0",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.17.0"
+    "lint-staged": "^8.1.5"
   }
 }
