--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "styled-system": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
