test(theme): add test for theme.js

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "building blocks",
     "component",
     "components",
-    "react"
+    "react",
+    "react building blocks"
   ],
   "author": "James Singleton (https://twitter.com/Design__Pattern)",
   "license": "MIT",
