--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:coverage": "jest --coverage --colors",
     "storybook": "start-storybook -p 6006",
     "lint": "eslint src",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:dev": "cross-env NODE_ENV=development rollup -c"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -63,7 +65,7 @@
     "@storybook/react": "5.0.11",
     "@storybook/theming": "5.0.11",
     "amex-jest-preset-react": "5.0.1",
-    "babel-loader": "8.0.5",
+    "babel-loader": "^8.0.5",
     "babel-preset-amex": "2.1.0",
     "enzyme": "3.9.0",
     "enzyme-to-json": "3.3.5",
@@ -71,6 +73,9 @@
     "eslint-config-amex": "10.1.0",
     "husky": "2.2.0",
     "jest": "24.8.0",
-    "lint-staged": "8.1.6"
+    "lint-staged": "8.1.6",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.2",
+    "yargs": "^13.2.2"
   }
 }
