--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "react-building-blocks",
   "version": "1.0.0",
   "description": "Components made with React",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
+    "build-storybook": "build-storybook",
+    "build": "npm run clean && rollup -c",
+    "clean": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors",
     "storybook": "start-storybook -p 6006",
-    "lint": "eslint src",
-    "build-storybook": "build-storybook",
-    "build:prod": "cross-env NODE_ENV=production rollup -c",
-    "build:dev": "cross-env NODE_ENV=development rollup -c"
+    "lint": "eslint src"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -74,8 +74,11 @@
     "husky": "2.2.0",
     "jest": "24.8.0",
     "lint-staged": "8.1.6",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.2",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.11.3",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "yargs": "^13.2.2"
   }
 }
