feat(config): add .npmrc and rollup-plugin-terser

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 
 
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+# Build
+build/
 
 # Dependency directories
 node_modules/
