--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "enzyme-to-json": "3.4.0",
     "eslint": "5.16.0",
     "eslint-config-amex": "10.1.0",
-    "husky": "3.0.4",
+    "husky": "^3.0.5",
     "jest": "24.9.0",
     "lint-staged": "9.2.5",
     "rimraf": "3.0.0",
