--- a/package.json
+++ b/package.json
@@ -50,13 +50,12 @@
   "homepage": "https://github.com/JamesSingleton/react-building-blocks#readme",
   "dependencies": {
     "classnames": "^2.2.6",
-    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "snyk": "^1.222.0",
     "styled-components": "^4.3.2",
-    "styled-system": "^5.1.1",
-    "snyk": "^1.222.0"
+    "styled-system": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
