--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-building-blocks",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Components made with React",
   "main": "build/bundle.js",
   "scripts": {
@@ -51,8 +51,6 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "snyk": "^1.222.0",
     "styled-components": "^4.3.2",
     "styled-system": "^5.1.1"
@@ -76,6 +74,8 @@
     "husky": "3.0.5",
     "jest": "24.9.0",
     "lint-staged": "9.2.5",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "rimraf": "3.0.0",
     "rollup": "1.20.3",
     "rollup-plugin-babel": "4.3.3",
@@ -83,6 +83,10 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-terser": "5.1.1",
     "yargs": "14.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "snyk": true
 }
